# market-compass-forge

./: .env  .env.example  .gitignore  .replit  AGENTS.md  Dockerfile  Makefile  README.md  REPLIT.md  beastbot.db-shm  beastbot.db-wal  cloudbuild.yaml  deploy-cloudrun.sh  docker-compose.yml  fly.api.toml  fly.toml  fly.web.toml  index.html  init-db.sh  middleware.ts  next.config.js  out.js  package-lock.json  package.json  pyproject.toml  render.yaml  replit.nix  tailwind.config.ts  tsconfig.base.json  turbo.json  vite.config.ts  vitest.config.ts  wrangler.toml
.github/: copilot-instructions.md
.github/agents/: auth-architect.agent.md  bot-architect.agent.md  chief-of-staff.agent.md  data-architect.agent.md  designer.agent.md  devops.agent.md  finisher.agent.md  functionality.agent.md  integration-engineer.agent.md  launch.agent.md  marketing.agent.md  reviewer.agent.md  visionary.agent.md
.github/workflows/: ci.yml  nextjs.yml
.lovable/: plan.md
apps/web/: Dockerfile  next.config.js  package.json  playwright.config.ts  tailwind.config.ts
docs/: ARCHITECTURE.md  INTEGRATION_CHECKLIST.md  architecture.md  cloudsql-migration.md  deployment.md  nvidia_demo_script.md  render-deploy.md  technical_one_pager.md
docs/api/: README.md  endpoints.md  errors.md  pagination.md  (+2 more)
engine/: pyproject.toml
openclaw/: README.md  agent.test.ts  agent.ts  agent.yml
scripts/: deploy-cloudflare.sh  dev-local.ps1  dev.sh  replit-init-db.py  replit-start.sh  seed-founder-account.cjs
src/: App.tsx  index.css
supabase/: config.toml
tools/: boundary_check.py  demo_verify.sh
(+555 files in other folders)
